@@ -118,7 +118,7 @@ our %lang2keyboard =
   'ps'  => 'pus:80 snd:60',
 'pt_BR' => 'br:90 lat:20 pt:10 us_intl:30',
   'pt'  => 'pt:90',
-  'ro'  => 'ro2:80 ro:40 us_intl:10',
+  'ro'  => 'ro:80 ro_qwertz:40 us_intl:10',
   'ru'  => 'ru:85 ru_yawerty:80 ua:50',
   'sc'  => 'it:90',
   'sd'  => 'snd:80 ara:20',
@@ -281,8 +281,8 @@ arch() =~ /^sparc/ ? (
  "pus" => [ N_("_: keyboard\nPashto"),        "us",              "pus",   1 ],
  "pt" => [ N_("_: keyboard\nPortuguese"),     "pt-latin1",       "pt",    0 ],
  "qc" => [ N_("_: keyboard\nCanadian (Quebec)"), "qc-latin1",    "ca",    0 ],
- "ro2" => [ N_("_: keyboard\nRomanian (qwertz)"), "ro2",         "ro",    0 ],
- "ro" => [ N_("_: keyboard\nRomanian (qwerty)"), "ro",           "ro(us)", 0 ],
+ "ro_qwertz" => [ N_("_: keyboard\nRomanian (qwertz)"), "ro2",         "ro(winkeys)", 0 ],
+ "ro" => [ N_("_: keyboard\nRomanian (qwerty)"), "ro",           "ro(std_cedilla)", 0 ],
  "ru" => [ N_("_: keyboard\nRussian"),        "ru4",             "ru(winkeys)", 1 ],
  "ru_yawerty" => [ N_("_: keyboard\nRussian (phonetic)"), "ru-yawerty", "ru(phonetic)", 1 ],
  "se" => [ N_("_: keyboard\nSwedish"),        "se-latin1",       "se",    0 ],
